# clique-crypto

./: Cargo.toml  LICENSE_MIT  Makefile.toml  README.md  rust-toolchain
.github/: publish.yml
.github/workflows/: publish-github-pages.yml  publish-npm-package.yml  publish.yml
binding/: Cargo.toml
binding/src/: aes.rs  lib.rs
binding/src/shamir/: constants.rs
binding/src/shamir/helpers/: crypto.rs  mod.rs
binding/tests/: aes.rs
crates/dcap/: Cargo.toml
crates/dcap/src/: auth_data.rs  lib.rs  quote.rs  signature.rs  traits.rs
src/: aes.rs  lib.rs  utils.rs
src/shamir/: constants.rs  mod.rs
src/shamir/helpers/: crypto.rs  mod.rs  share.rs  string.rs
tests/: aes.rs  shamir.rs  web.rs
