[package]
name = "clique-crypto"
version = "0.1.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdh", "alloc"] }
sha2 = { version = "0.10.8", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
